{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 9,
  "lineage": "4325a3d5-3601-5f82-ad74-911281b8a52e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "two_tier_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0c9cb7faf419d6417",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng48-Shireen-Y-app - igw"
            },
            "vpc_id": "vpc-049e8638da70e2298"
          },
          "dependencies": [
            "aws_vpc.two_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priv_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02ff183b7b26f1d44",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Eng48-Shireen-Y-app - private route"
            },
            "vpc_id": "vpc-049e8638da70e2298"
          },
          "dependencies": [
            "aws_vpc.two_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0931e7853f05bd6e4",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c9cb7faf419d6417",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Eng48-Shireen-Y-app - route"
            },
            "vpc_id": "vpc-049e8638da70e2298"
          },
          "dependencies": [
            "aws_internet_gateway.two_tier_gw",
            "aws_vpc.two_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00bc8b5938280930e",
            "route_table_id": "rtb-02ff183b7b26f1d44",
            "subnet_id": "subnet-0e0e9c497553e3327"
          },
          "dependencies": [
            "aws_route_table.priv_route_table",
            "aws_subnet.priv_subnet",
            "aws_vpc.two_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b391d4170c63857f",
            "route_table_id": "rtb-0931e7853f05bd6e4",
            "subnet_id": "subnet-01c9cecf4b529cafe"
          },
          "dependencies": [
            "aws_internet_gateway.two_tier_gw",
            "aws_route_table.pub_route_table",
            "aws_subnet.pub_subnet",
            "aws_vpc.two_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0e0e9c497553e3327",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e0e9c497553e3327",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng48-Shireen-Y-app - private subnet"
            },
            "vpc_id": "vpc-049e8638da70e2298"
          },
          "dependencies": [
            "aws_vpc.two_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-01c9cecf4b529cafe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-01c9cecf4b529cafe",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng48-Shireen-Y-app - public subnet"
            },
            "vpc_id": "vpc-049e8638da70e2298"
          },
          "dependencies": [
            "aws_vpc.two_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "two_tier_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-049e8638da70e2298",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09a8c8b175b9650e6",
            "default_route_table_id": "rtb-0e98e01d18c1bf18e",
            "default_security_group_id": "sg-01c12dc87ba0f6ea0",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-049e8638da70e2298",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e98e01d18c1bf18e",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng48-Shireen-Y-app - VPC"
            }
          }
        }
      ]
    }
  ]
}